# ShadowSocks_cpp

./: .travis.yml  CMakeLists.txt  README.md  shadowsocksr.desktop
Project/Common/: CMakeLists.txt  InstanceManager.cpp  JSONHelper.cpp  JSONHelper.h  Mutex.cpp  Singleton.cpp  Singleton.h
Project/EventLoop/: CMakeLists.txt  EventLoop.cpp  EventLoop.h  LibExport.cpp  LibMain.cpp
Project/Pipe/: CMakeLists.txt  LibMain.cpp  Pipe.cpp
Project/Plugin/: CMakeLists.txt
Project/Plugin/CommonProxy/: CMakeLists.txt  CommonProxy.cpp  CommonProxy.h  LibExport.cpp
Project/Plugin/PortTunnel/: CMakeLists.txt  LibExport.cpp  LibMain.cpp  PortTunnel.cpp  PortTunnel.h
Project/Plugin/ProxyServer/: CMakeLists.txt  LibExport.cpp  ProxyServer.cpp  ProxyServer.h
Project/Plugin/SSR/: CMakeLists.txt
Project/Plugin/SSR/SSRLocal/: CMakeLists.txt  LibExport.cpp  LibMain.cpp  SSRLocal.cpp  SSRLocal.h
Project/Plugin/SSR/SSRObfs/: CMakeLists.txt  HTTPSimple.cpp  HTTPSimple.h  LibMain.cpp  TLSTicketAuth.cpp  TLSTicketAuth.h
Project/Plugin/SSR/SSRProtocol/: AuthChain.cpp  AuthChain.h  AuthChainLocal.cpp  AuthChainLocal.h  CMakeLists.txt  LibMain.cpp
Project/Plugin/SSR/SSRProtocol/AuthChain/: AuthChain.cpp  AuthChain.h  AuthChainLocal.cpp  AuthChainLocal.h  CMakeLists.txt  LibExport.cpp
Project/Plugin/SSR/SSRProtocol/HTTPSimple/: CMakeLists.txt  HTTPSimple.cpp  HTTPSimple.h  LibExport.cpp
Project/Plugin/SSR/SSRProtocol/TLSTicketAuth/: CMakeLists.txt  LibExport.cpp  TLSTicketAuth.cpp  TLSTicketAuth.h
Project/Plugin/SocketConnector/: CMakeLists.txt  LibExport.cpp  SocketConnector.cpp  SocketConnector.h
Project/Plugin/Socks5/: CMakeLists.txt  LibExport.cpp  LibMain.cpp  Socks5.cpp  Socks5.h
Project/Plugin/SocksClient/: CMakeLists.txt  LibExport.cpp  LibMain.cpp  SocksClient.cpp  SocksClient.h
Project/Plugin/SocksServer/: CMakeLists.txt  LibExport.cpp  SocksServer.cpp  SocksServer.h
Project/ShadowSocksr/: CMakeLists.txt  CShadowSocks.cpp  CShadowSocks.h  ShadowSocks.cpp  ShadowSocks.h  main.cpp
Project/Socket/: CMakeLists.txt  LibExport.cpp  LibMain.cpp  SocketPipe.cpp  SocketPipe.h  TCPSocket.cpp  TCPSocket.h
Project/SocketNode/: CMakeLists.txt  LibExport.cpp  LocalSocketNode.h  RemoteSocketNode.h  SocketNode.cpp  SocketNode.h
Project/SocketProxy/: CMakeLists.txt  HTTPTunnel.cpp  HTTPTunnel.h  LibExport.cpp  LibMain.cpp
Project/SocketRelay/: CMakeLists.txt  CommonSocketRelay.cpp  CommonSocketRelay.h  LibExport.cpp  LibMain.cpp  SocketRelay.cpp  SocketRelay.h
Project/TCPRelay/: CMakeLists.txt  CommonSocketRelay.h  LibMain.cpp  SocketRelay.cpp  TCPRelay.cpp  TCPRelay.h
include/Common/: Condition.h  IInstanceManager.h  InstanceManager.h  Interface.h  JSONHelper.h  Mutex.h  Singleton.h
include/Common/Utils/: Base64.h  Binascii.h  JSONHelper.h  Random.h  VectorHelper.h
include/EventLoop/: IEventLoop.h  ISocket.h  LibEventExport.h
include/Node/: INode.h  INodeManager.h  Node.h  NodeEvent.h  NodeEventDef.h  NodeManager.h  NodeService.h  NodeServiceDef.h
include/Pipe/: IPipe.h  Pipe.h  PipeDelay.h
include/Plugin/: IPlugin.h  LibPluginExport.h  Plugin.h  PluginLoader.h
include/Plugin/CommonProxy/: CommonProtocol.h
include/Plugin/SSR/Protocol/: IProtocol.h  LibProtocolExport.h  Protocol.h  ProtocolLoader.h  ServerInfo.h
include/Plugin/SSR/Utils/: AES128.h  Base64.h  Binascii.h  Encryptor.h  HMAC.h  RC4.h  Random.h  Vector.h  XorShift128Plus.h
include/Plugin/Socks5/: Socks5Protocol.h
include/Socket/: DNS.h  HTTPTunnel.h  ISocket.h  ISocketPipe.h  LibSocketExport.h
include/SocketNode/: ISocketNode.h  LibSocketNodeExport.h
include/SocketProxy/: ISocketProxy.h  LibSocketProxyExport.h
include/SocketRelay/: ISocketRelay.h  LibSocketRelayExport.h
include/glog/: logging.h
include/libevent/event2/: event-config.h
lib/: libevent.so.2.2.0  libglog.so.0
